--- a/serial/paper9/paper7.tex
+++ b/serial/paper9/paper7.tex
@@ -182,7 +182,7 @@ For now, we need to formalize what is AGI actually saying, in context. Or rather
 \begin{definition}[Artificial general intelligence]
     Based on Conjectures~\ref{conj:conjecture_AI_1} and~\ref{conj:conjecture_AI_2} and the fragmented intelligence scheme, define a quality basis $\mathsf{AI}_{n}=\{A_{1},\dots,A_{n}\}$ of arbitrary given qualities specified of an artificial intelligence construct. Then, a construct $\mathsf{AGI}\in\mathsf{AI}_{n}$ is called an artificial general intelligence, if $\mathsf{AGI}$ can be represented as 
     \begin{equation}
-        \mathsf{AGI} = \alpha_{1}A_{1} + \alpha_{2}A_{2} + \dots + \alpha_{n}A_{n}, \quad \alpha_{i} > 0, i = ,\dots, n
+        \mathsf{AGI} = \alpha_{1}A_{1} + \alpha_{2}A_{2} + \dots + \alpha_{n}A_{n}, \quad \alpha_{i} > 0, i = 1,\dots, n
     \end{equation}
     That is, $\mathsf{AGI}$ expresses every given qualities of the quality basis, to a given evaluation degree $\alpha_{i}$ associated with each quality. Thus, we say $\mathsf{AGI}$ spans the entire quality space. 
 \end{definition}
@@ -340,7 +340,7 @@ Where $e_{uv}$ represents the edge features, if any, $h^{(k)}_{v}$ is the embedd
 Aside from some archetype of learning, for example, online learning of which keep dynamically update the model in a sense, generally, neural network and such type of parameterized models are \textit{static}. They act, just as CRA indicted, to be an algorithmic machine only, of which fits to a description, to a task, to a given degree of accuracy within certain manually designed encoded space, manually designed objective, limited or no interpretation of the scheme itself (classification machines think in numerics and matching errors, thus would not know what a cat is, but only know that an object named \texttt{0x0AB4} must be evaluated in some way that can be optimized and reduced). The operating stream itself of the neural network is limited, as we can say of the feed-forward scheme. The extension that neural network is configured to is limited, and lest to say that the neural network scheme itself is underdeveloped, ultimately relies on the simplest possible modelling structure to then give rise to a multitude of different architectures of date. Computational optimization and layer-optimization, practically constrained structures further hampers down such understanding of the neural network itself, as nobody knows what happen in the neural network, less to try adapting it to different situations. 
 
 Go for technicality, neural network architecture of itself faces several increasingly difficult dilemma. Let us disregard the problem of Neural Scaling Law, \cite{kaplan2020scalinglawsneurallanguage}, as it is simply an empirical optimization observation hyped of its wording\footnote{Of the Neural Scaling Law, conceptually, the result is purely empirical on deviation from regular norm, which is expressed by $$L(N,D,C)\propto (N^{\alpha}D^{\beta}C^{\gamma})^{-\eta}$$ Where $L$ is the loss, $N$ being model parameters, $D$ is the dataset size, $C$ being the compute used, and $\eta$ is an empirically fitted exponent. Plotting such relation into logarithmic scale gives roughly the linear relation that is typically seen in literatures and news context.The apparent `law' only emerges because it is plotted on log-log axes. Almost any monotonically diminishing function can be made to look linear on a log plot over a limited range. The law itself also only empirically states such relation without the underlying mechanics or assumptions that would make it a technical `law', and is purely empirical observation. In practice, achieving near-zero error is fairly normal, and within such structure, there exists no framework to indict that the neural scaling law holds any value aside from interesting engineering heuristics. Indeed, perhaps, after it is published, many papers were born dedicated to question or beating such argument, such as \cite{sorscher2023neuralscalinglawsbeating,ivgi-etal-2022-scaling,su2024unravelingmysteryscalinglaws,lee2025neuralscalinglawsleading}, and \cite{doi:10.1073/pnas.2311878121}. Therefore, it is not worth it of such analysis.}, the theoretical ground on which neural network is born from, and the empirical method it employs to advance ever since, face problems regarding interpretability, structural effectiveness or definition, phenomena explanations, uncontrollable behaviours, black-box restrictions, rigidness of architecture, uncertainty and vanishing problems, overloading problems, and so on. Interpretation is the largest problem with such theoretical and both heuristic treatment, as no one understand what lies underneath such system and the operation that births such result observed or tasked itself. Explainable AI, like presented in \cite{hsieh2024comprehensiveguideexplainableai}, was created to counter such issue, still cannot work or cannot make substantial advancements aside from careful manual designs and limited domain analysis, which in an unfair bit of comparison, go back to the time of symbolic AI approach. This is even worse for neural network, as the regular wisdom is that no one understands the operation of hidden layers and all, in any given setting, aside from which you reduce it to very small size like a perceptron or so. Theoretical development toward such is also slow, and often simplify it to mathematical object to be analysed too rigorously, losing the essence of the architecture in the mathematics rigours. This is particular event or rather pattern that we unfortunately stretched to the previous section on learning theory. Often see in learning theory development, or machine learning theory in general - the `\textbf{mathification}' of a theory is a problem that somewhat plagues papers and researches on machine learning topics. Even though we need mathematics on either end, the approach is impractical or simply wrong, believing mathematics to be the singular thing that defines learning theory. This has many fallacies that can then be attributed to a lot of factors and whatnot, of several factors that plague this analysis even further than just the problem of double descent. For now, 
-\begin{enumerate}[itemsep=2pt,topsep=1pt,leftmargin=1.5cm]
+\begin{enumerate}[itemsep=2pt,topsep=1pt,leftmargin=1.2cm]
     \item Epistemological limits and interpretations (\cite{electronics13020416}) - We ultimately lack understanding of a lot of things. While those `theorems' are very nice in learning theory, the real picture is that it is not real learning, for the word learning are not even defined, as such is to compare them to \textit{human learning} on itself. Even by then, theorems are severely limited. Certain voices also concern of similar problem, including \cite{lipton2016mythos,doshi2017towards,molnar2020general} (\cite{molnar2020general} shortly consider the misleading interpretation question instead), and philosophically, with several pushbacks on structural anecdotes, \cite{dreyfus1965alchemy,dreyfus1972what,dreyfus1986mind,suchman1987plans,brooks1991intelligence,searle1980minds,mccarthy1969philosophical,harnad1990symbol}. On the more modern side, of contemporary critiques, \cite{pearl2009causality,marcus2018deep,sutton2019bitter}. Of the Chinese Room Argument, perhaps we can look into already copulated passages. 
     \item Applying wrongly, and is used to impress and not to explain anything (\cite{lipton2018troublingtrendsmachinelearning}) - mathematics is used to \textit{impress} certain demographic of reviewers and readers, to provide a sense of rigours, to further enhancing the image of formal theory to the point that such theory, even if wrong, can be considered fairly correct by the sheer volume of practitioners believing in such. Such is to say the \textit{mathiness} is turning things into ideology more than rigours itself, of which we can take a tangent to see in economic theory, one of the place to adopt a large portion of machine learning statistics, the pushback against such cursed devolution (\cite{romer2015mathiness,syll2024postreal}). Such can also be seen in generally most double descent analysis, in which there exists many formalisms yet not definite result on double descent. 
     \item Reproducibility and acute false claims (\cite{kapoor2022leakage}) - In general, what we have done cannot be recreated, in certain way, and of certain too optimistic setting that is seemingly unrealistic - particularly in adoption toward practical means of actions. Certain theoretical assumptions and formulations are too stricts, of which means the increment of hypothesis fluctuation with removal of such constraints. 
@@ -359,7 +359,7 @@ It is then fairly connective to approach from certain angle, that concerning Hei
 
 \clearpage
 
-\section{Future of Artificial Intelligence}
+\section{Future of Artificial Intelligence}\label{sec:3form}
 
 The future of artificial intelligence under the current framework looks bleak. Indeed, such can be said of every `matured' enough research and resource-intensive master research plan, and thus, we would have to consider a almost likely slowdown and perhaps not so dramatically, a winter age again for adoptions and maturity in other facet of technological application. During such time, however, we might as well look at what to do to try resolving such problem. 
 
@@ -439,17 +439,34 @@ Again, such theory and treatment does not claim to solve the problem directly, a
 
 The most important theory or rather, functionality of mutation that enables certain model to facilitate dynamic changes, are indeed the theoretical notion of the learning procedure. Toward such end, generalization of the theory itself, and what is meant of the notion that was typically seen, for example, \textit{generalization}, and so on, is in the question for clarification, and both development of such. This section will only outline the basic philosophical thought of the implication of a learning action in the machine-theoretic lens, for further expansion of the topic to be reserved in future works and separated developments. The main goal, however, would be to realize the entire picture of how the learning process is expressed, usually, and what can be gained from such framing. 
 
-What we attempted as learning would be inherently built upon the perspective of a system dynamic. Specifically, we see that we can utilize existing idea, for example, the simple \textit{agent} system in \cite{stanford2018ai} as the critique system. Let us denote the agent of interest as $A$. This agent has the internal mechanism $M$, the sensory $S$ and the action $F$, of which it uses of the operating environment $E$ surrounding of which $S$ can sense, marginally of its intended features. 
+What we attempted as learning would be inherently built upon the perspective of a system dynamic. Specifically, we see that we can utilize existing idea, for example, the simple \textit{agent} system in \cite{stanford2018ai} as the critique system. The implication is then simple - we posit that within this observation or insight, we can reveal more about the dynamics of which our models are taking, and what to construct next of requirements. For now, let us denote the agent of interest as $A$. This agent has the internal mechanism $M$, the sensory $S$ and the action $F$, of which it uses of the operating environment $E$ surrounding of which $S$ can sense, marginally of its intended features. We posit the following definition, of which applies for all constructs, lest of only the singular artificial intelligence subject. 
 
-The existence of such model can be realized in certain `situation' by the resource it occupies of the existence of such. Under the computationalism approach, such includes \textit{time complexity}, memory allocation, and \textit{structural interpretation} via the native \textit{encoding language} (such is numerical). The observation system of interest includes the resource as the \textit{observations} itself - usually expressed also via the native encoding language itself, attaining the structure choice of the environment - for example, continuous observations or discrete observations that can be isolated of a concrete state. Such observation itself, is governed by the selective rule of the system's environment, of which draw out such result we see of the environment. Those \textit{natural information} are inherently hidden, from the perspective of the agent sensory system itself, or rather of the inherent way of receiving information from the sensory unit configured of choice. Moving on from such, we emphasize the need to clearing out the problem of \textit{existential facility}, and \textit{operational facility} of any given agent system of interest, and thus, also the environment at will. While it can be said that the environment would be less susceptible to such framing, from the perspective of an objective constructivism approach, the environment itself being used on said agent, is within the limit in which the designer (human, etc, intelligent agency), can argue and consider of such. Thereby, there exists existential facilities - those that support such construction and regard of the environment (for example, a physical environment consideration requires the basis of laws of physics for potential framing of such laws) that is procured to the model itself, and thus form the basis of the existential facility thereof. Operational facility comes in hand as the actual functional, observables that exist as object of interest within said environment $E$. The model itself attains such level of existential-operational facilities on itself, however, the existential facilities here form the basis of its construction, while the operational faclities form the basis of its actual process and operations thereof itself. Simply speak, such notion of more naturally applied for an \textit{actionable}, \textit{constructible} system of interest. For the agent itself, computationalism indicts on the property of being constructed on the basis of the computable system, i.e. computers. Thus, it bears constraints, encoding specification, structural mechanism of the computable system that it is based on upon. For example, this can be as we have already mentioned, the need for \textbf{numerical encoding} in modern computing system, the memory and time-constraint of which makes certain operation or specific operation of interest infeasible of the resource sensitive to such computational object ($NP$-hard problems, etc), or the complication in constructing certain architecture or expression of the model agent of interest (for example, a system of language, abstracted to either procedural or OOP, presents architectural abstraction in which can make constructions difficult even within a singular basis of computation). Such makes up how and what can the paradigm, for even the biological neuron abstraction can take within the respect of such computational system, reduced to an input-and-activation unit, or later on where the more computably-optimized schema is the layering scheme. Such is then can be linked to the operational facilities, of which contains two separate entities of consideration - the mass, or rather, \textbf{facilities}, and the \textbf{process}, of which considers the operational itself of the agent. 
+\begin{definition}[Construct]
+    A \textbf{construct} is a conceptual encapsulation of two components: The \textbf{machine} in broad term which houses the \textit{operational facility}, and optionally, the \textit{existential facility} of the construct, and the \textbf{process}, or rather, its \textbf{state(s)} of being. These two makes up a functional construct of interest.
+\end{definition}
 
-Inherently, we see there exists two internal mechanisms of interest. One, belongs to the model itself, now we denote $M_{A}$, and one is the mechanism, or the law of which observations in $E$ is observed, denoted $M_{E}$.  
+The existence of such model can be realized in certain `situation' by the resource it occupies of the existence of such. Under the computationalism approach, such includes \textit{time complexity}, memory allocation, and \textit{structural interpretation} via the native \textit{encoding language} (such is numerical). The observation system of interest includes the resource as the \textit{observations} itself - usually expressed also via the native encoding language itself, attaining the structure choice of the environment - for example, continuous observations or discrete observations that can be isolated of a concrete state. Such observation itself, is governed by the selective rule of the system's environment, of which draw out such result we see of the environment. Those \textit{natural information} are inherently hidden, from the perspective of the agent sensory system itself, or rather of the inherent way of receiving information from the sensory unit configured of choice. Moving on from such, we emphasize the need to clearing out the problem of \textit{existential facility}, and \textit{operational facility} of any given agent system of interest, and thus, also the environment at will. While it can be said that the environment would be less susceptible to such framing, from the perspective of an objective constructivism approach, the environment itself being used on said agent, is within the limit in which the designer (human, etc, intelligent agency), can argue and consider of such. Thereby, there exists existential facilities - those that support such construction and regard of the environment (for example, a physical environment consideration requires the basis of laws of physics for potential framing of such laws) that is procured to the model itself, and thus form the basis of the existential facility thereof. Operational facility comes in hand as the actual functional, observables that exist as object of interest within said environment $E$. The model itself attains such level of existential-operational facilities on itself, however, the existential facilities here form the basis of its construction, while the operational facilities form the basis of its actual process and operations thereof itself. Simply speak, such notion of more naturally applied for an \textit{actionable}, \textit{constructible} system of interest. For the agent itself, computationalism induces on the property of being constructed on the basis of the computable system, i.e. computers. Thus, it bears constraints, encoding specification, structural mechanism of the computable system that it is based on upon. For example, this can be as we have already mentioned, the need for \textbf{numerical encoding} in modern computing system, the memory and time-constraint of which makes certain operation or specific operation of interest infeasible of the resource sensitive to such computational object ($NP$-hard problems, etc), or the complication in constructing certain architecture or expression of the model agent of interest (for example, a system of language, abstracted to either procedural or OOP, presents architectural abstraction in which can make constructions difficult even within a singular basis of computation). Such makes up how and what can the paradigm, for even the biological neuron abstraction can take within the respect of such computational system, reduced to an input-and-activation unit, or later on where the more computably-optimized schema is the layering scheme. Such is then can be linked to the operational facilities, of which contains two separate entities of consideration - the mass, or rather, \textbf{facilities}, and the \textbf{process}, of which considers the operational itself of the agent. 
+
+Inherently, we see there exists two internal mechanisms of interest. One, belongs to the model itself, now we denote $M_{A}$, and one is the mechanism, or the law of which observations in $E$ is observed, denoted $M_{E}$. Such internal mechanisms are often more considerately important than the sensory actions itself, and of which generally comes in two main categorization. The internal mechanism classified via exposure, contains the \textbf{internal interface} of which is more closely linked to the specificity of the sensory system and external action potential (i.e. the action unit), and the follow-up fully internal system of which can be theorized to control and operate in unification of such sense. In a sense, what we define is the delegation of interface, in which the existential and operating facilities are handled via separated specialized interface, and so on. While it is said so as to in one way or another, partially support the theory of fragmented intelligence, such is also needed to be reminded of that in terms of internal structure, such interface bears heavy deviation toward the sensory experience itself. Or rather, the action handling is inherent of the dynamic observed by and acted upon by the sensor, and usually do not reflect such of the internal structure, aside from the internal structure's interface strength, and the effectiveness of the interface-to-sensor structure. When speaking such system, $M_{E}$ is delegated observations in which $M_{E}\to M_{E,S}$, or $M_{E}'$ for short, taking into account the sensory perception itself. The \textit{information} received from $M_{E}$ by $A$ is inherently shallow, and can only be interpreted inside $S$'s capability itself. However, such information is extended in a different case. 
+
+Next, we further the position that there exists the \textbf{process} of the operational facilities, of which handles the operation itself. This concept requires us to handle the concept of \textbf{state}, as per natural it is of to classify and quantize the `condition' and `resource', or `structure' of a given subject, model, theory, and so on, at any given situation, without mutation\footnote{The concept is again recursive, as the `state' of a theory requires the theory of state, and so on so forth. Even for abstract mathematics, talking about the `state' of the field at any given time means to quantize the field itself, in one way or another befit of the alma matter, and thus the condition of the field as said.}. Such discrete state is handled and intrinsic of any operating structure, hence $M_{E}$ and $M_{A}$. While we do not go into many details of the philosophical inquiry about state transition, one thing can be sure is that they hold more information than the simple static observation. Thus comes the notion of a \textit{static} system observation, or \textit{dynamic} system observation. The singular $M_{E}\to M_{E,S}$ represents the static case, in which observations are frozen in time or any arbitrary notion $t$ as a `snapshot', while the copula $\{M_{E}\to M_{E,S}\}_{t}$ represents the dynamic case, in which such arbitrary `state snapshot' now contains the relative previous or future states of the system. Hence, it allows for multi-facet information, with respect to the static case of such. The system can have these properties in many ways, for example, if the system itself is a mask, then it contains the notion for the static-dynamic mask only, while the lower-level under that mask can still be dynamic - thus those concepts are system-dependent. 
+
+What we have said are to set up the system by itself, the model in which operations are there to work, and the system observation in which $A$ itself are tasked of, given its capability thereof that can be quantified. Now, come to the question: what is the learning dynamics, and how should it be important of? 
+
+Naively observing such, we can understand that the \textit{sensor} itself is not good of forming, acting purely as the information receiver themselves. Without the interface, it can do nothing, but we also encounter such fact that without any knowledge or interpretation, the interface only serves as an increased per length tool - just like a bridge from $Q\to P$, it does not do anything beside lengthens the signal travel time. Thereby, it requires interpretation to be built upon, in which development of the interface on sensors must be indicted of. It is also here that we see the limitation of the sensory information received from $M_{E}$, and the limitation coming from $S$ itself. $S$, even in dynamic of static case, cannot see everything there is of the measure provided on the landscape of the system. For example, if the system expresses itself majorly in $(x,y,z,t_{1},\theta)$, but the sensor can only connect to, or know of, $\theta$, this leaves an extreme gap in information. Assuming such snapshot copula for $\theta$ alone to be influenced by a network in which the other quantities interact, with its own underlying constructs and interactions, then abnormality, sudden changes, outliers, roughness of $\theta$ cannot be explained any further but to set it as noise. The snapshot itself might also leave questionable gaps between observation itself. For example, there might only exist the state in which energies are there in discrete intervals, and there are regions in which no observation are made, mainly out of \textit{structural constraints} on the system of its value on itself. The snapshot itself also does not hold any information, without interpreter, even in dynamic case --- as for in such case can only be no more than a bunch of discrete and individual observables without structural adherence, i.e. we see it as function, but the system itself experience it in a non-function sense, would not be able to triangulate such. This is fairly mitigated when the data itself is rich enough in information, and thus allows for what is usually called \textit{sigle-shot operation}, however, such case is typically rare, and within the current framework, the operation that led to such development is more likely to be categorized as inconsistent. Thus, we can then consider it a disorganized bunch of observation, and not inherently obtains the notion of relation, let alone function. Such pushes for the internal mechanism, or any supporting substrate, that can `interpret', using our analogy, and construct certain system inside the modelled agent itself, both in restricted case of singular subject, or in dynamic cases of data, and within poor or rich data quality and observation density. 
+
+This, naturally expresses the notion of \textbf{learning} as an integral part of the system dynamic, however much more sophisticated in the sense of arbitrary 'adaptation' of a system instead. From such, we can clearly distinguish two types of learning - one of which is \textbf{structural learning}, where the adaptation availability is for the structure of the model itself, while the other is of \textbf{operational learning}, where the process itself is modified of said adaptation. They allow for different mode of mutation, and also different mode of modification with specified behaviours. The learning sequence then can be copulated into different parts, of which we essentially posit that structural learning is of higher priority than operational learning, though in certain sense, operational can be utilized much better. What that said, we need to take on the priori on which learning is necessary. While we have been speaking of the necessity of it as a functional construct to interpret, create interface of which we can apply on, and so on. But we are skipping the natural justification of learning mechanics, which is very hard and is not relevant in our creation (though might be so in a difference sense\footnote{Some might notice this as the point of \textit{emergence}, not in the sense of pop-science emergence, but percolation/emergence, where the property in which simple system are coupled together, working in different scale, conditions, and so on, creates complex and often reactively sophisticated system with certain amount of functionality, purposes, dialect, or simply population for discrete replica, and they themselves are parts of a larger construct interacting in such system space.}), we need to resolve, then, the \textbf{objective} of learning. This is a very hard question, and indeed, have no satisfactory answer. Indeed, the only way that we can typically see, is the scheme in which we introduce \textit{logical impulse} in which is interpreted of a sense, as favourable. That is, clarify an objective $\ell$ to reach, then of certainty, introduce the reward/punishment in which either get you closer to the objective, or further out. This hits the wall of replication and mimicking, but no actual constraints, as we have argued in previous sections. Typically, what we do in both supervised learning or semi-supervised learning scheme, or even unsupervised scheme, we often resort to either 'specialized designing' - in the case of unsupervised learning and all, or \textbf{external modification} as of supervised or semi-supervised case, in which as said, remove the learning functional, outside the working model itself. Inductive bias - or so is what it is called of, as the bias from the designer perspective, coming to the model, and so on so forth. External modification relieves the model from the burden of determining the meaning in its own space, of the action of learning and the generation of such, but in turn makes the model inflexible, less sophisticated, inherently shallow, static, and overall poorly designed on its own merit. Those solutions are temperamental, not permanent, nor it is in the long-run effective, though there is no doubt of its success in contemporary machine learning structures. As to push further, it is then to be believed that it is insufficient for such task. It is just similar as the replica problem of the imposed observations that we see. It feels like we are seeing patterns or uncovering something in data, or nature, usually can be agreed as such, but certain cases overvalued of such observations, while living in the world of which rules we create ourselves. 
+
+The issues can be relieved, in certain sense, of certain solution, for example, to build the model within the newfound theory of modelling, of which the philosophy of constructing such `AI' model as to be from first component - i.e. ground zero, and of which the operating environment of said given model is rich enough as to interpret different types of rewards or similar-purpose responses. Or, in certain sense, couple uniform randomization, and replicate the genetic evolutional pattern, as seen in perhaps many researches on such algorithms of such, for example, \cite{stanley2002neat,stanley2004competitivecoevolution,stanley2002efficientRL,oneill2001grammatical,ryan1998grammatical,zhang2020retneat,khamesian2021hybridattentionneat,volna2005evolutionarynn,sher2013neuroevolutionerl}, and as to allow the observation in which the learning adaptation itself generates the `purpose', within reason and within probable causation chain (though, we must be careful of the overstretched implications). Or, perhaps there exists certain other structural construct that allows such, of philosophy and mechanism that embed such on its own. Structural and operational learning notion can be applied into many current frameworks of learning requirements, though most of the time we are entangled within fixed operational, dynamic structural (for example, SVM), or fixed structural, dynamic operational (any reasonable learning framework of existence with many-phase inference) learning. If we can resolve the natural occurrence, not necessarily as to not encode the notion of learning itself, since we are allowed up to certain point, to encode them to the model as of a shortcut and heuristic baseline, then the structural-operational learning sequence would be much obliged of help, and certainly would provide a larger and richer theoretical grounding toward the generality of the learning concept. 
 
 \section{Conclusion}
+In its final form, the paper serves mainly what it is intended of - to critique and analyse the non-trivial yet apparent nature of current existing framework in pursuit of the intelligence question, the lacking knowledge, the implicit and explicit holes in our understanding, and the misguided optimism, plus expectation and progression. Furthermore, it also lays out the foundation of thought, in which of the uncertainty currently presenting, partially formalize the philosophy and approaches that would be taken on, given the school of thought in Section~\ref{sec:3form}. If expanded, of make rigorous in which the substance is not eluded in complication, and the unpolished over-mathematification of theoretical works, then potentially speaking, such framework introduced at the end would prove useful to the landscape in which of what we think of, as \textbf{machine}, and the modification of the \textbf{learning machine} on top. 
 
+Nevertheless, we do not simply reject, less of our rhetoric in the paper itself, as to criticize current practices and development, the stagnation of theoretical studies, and so on. But rather, the focus is to reach toward those that claims of which overstretched the current ability at present in existing structures. Current systems are good of what it is --- more specifically, it is a \textit{revolution} in which absolved the debate between symbolic or neuronic system, into a more sophisticated and generalized form --- and thus advanced alongside computational development to be as it is. Nevertheless, we should still address the elephant in the room, as for AGI is unattainable because of the opaque nature of such terms, the philosophical gap between treatments and how we view such studies of creating intelligent, or in general, proxical-life\footnote{We say \textit{proxical}, derived from the word proxy, here is to mean of creating machine-encoded, system-embedded system of life-capable form. Such is to separate it from the natural evolution of life in its natural form, which is a very time-and-resource-intensive game to play in reality, hence, in a partial sense, an emulation of such complex occurrence.} subjects, the overreliance on the LLM mode of operation as potentially universal, in which fallacies from itself have already proven wrong, and the practical, mathematical and theoretical frameworks' inadequacy that is often not realized, but hidden in plain sight. Such is also why developments and further breakthroughs have stalled --- by the lacking of which heuristic cannot cover any more. It is then natural, such as in the paper that future work for us is to recognize such systematic mistakes, identifying the foundation's weakness, and either fix it, connect it, path it, or reframe entirely under different direction. Said directions realized in this paper might not make it into the future; perhaps being superseded by something much more sophisticated. That said, its end goal should still be conceptually interesting, and the critique would stay, much to the disdain of the deniers, and thus the purpose of this inquiry is completed. 
 \section{Future works}
 
-\clearpage
+In future, following such conclusion, it is my purpose to extend those structures in which I laid out, verify their validity and sufficiency of such, and either replace them by something else, or proceed to construct them further on. That includes the theoretical system in which we can define, though temporarily, the research program in which start from ground zero of the constructs (i.e. the \textit{autopoietic system construction}), the definition of intelligence revisited and to reinterpret benchmarks and verification methods as of current, model definition and more works on the evolutional, percolation patterns of models itself, clarifying and putting in it the technical sufficiency for the neural network formalism, and many more works to come. 
+
 
 {
 \footnotesize
