--- a/serial/paper9/references.bib
+++ b/serial/paper9/references.bib
@@ -4333,3 +4333,92 @@ abstract = {The population loss of trained deep neural networks has been empiric
   address   = {Cambridge, MA}
 }
 
+@article{stanley2002neat,
+  title        = {Evolving Neural Networks through Augmenting Topologies},
+  author       = {Stanley, Kenneth O. and Miikkulainen, Risto},
+  journal      = {Evolutionary Computation},
+  volume       = {10},
+  number       = {2},
+  pages        = {99--127},
+  year         = {2002},
+  doi          = {10.1162/106365602320169811}
+}
+
+@article{stanley2004competitivecoevolution,
+  title        = {Competitive Coevolution through Evolutionary Complexification},
+  author       = {Stanley, Kenneth O. and Miikkulainen, Risto},
+  journal      = {Journal of Artificial Intelligence Research},
+  volume       = {21},
+  pages        = {63--100},
+  year         = {2004},
+  url          = {https://www.cs.cmu.edu/afs/cs/project/jair/pub/volume21/stanley04a.pdf}
+}
+
+@inproceedings{stanley2002efficientRL,
+  title        = {Efficient Reinforcement Learning through Evolving Neural Network Topologies},
+  author       = {Stanley, Kenneth O. and Miikkulainen, Risto},
+  booktitle    = {Proceedings of the Genetic and Evolutionary Computation Conference (GECCO-2002)},
+  year         = {2002},
+  publisher    = {Morgan Kaufmann},
+  note         = {Winner of Best Paper Award at GECCO 2002},
+  url          = {https://www.cs.utexas.edu/~nn/downloads/papers/stanley.gecco02_1.pdf}
+}
+
+@article{oneill2001grammatical,
+  title        = {Grammatical Evolution},
+  author       = {O’Neill, Michael and Ryan, Conor},
+  journal      = {IEEE Transactions on Evolutionary Computation},
+  volume       = {5},
+  number       = {4},
+  pages        = {349--358},
+  year         = {2001},
+  doi          = {10.1109/4235.942529}
+}
+
+@inproceedings{ryan1998grammatical,
+  title        = {Grammatical Evolution: Evolving Programs for an Arbitrary Language},
+  author       = {Ryan, Conor and Collins, J. J. and O’Neill, Michael},
+  booktitle    = {Proceedings of the First European Workshop on Genetic Programming (EuroGP’98)},
+  series       = {LNCS},
+  volume       = {1391},
+  pages        = {83--96},
+  year         = {1998},
+  publisher    = {Springer-Verlag},
+  doi          = {10.1007/BFb0055930}
+}
+
+@inproceedings{zhang2020retneat,
+  title        = {Evolving Neural Networks through a Reverse Encoding Tree},
+  author       = {Zhang, Haoling and Yang, Chao-Han Huck and Zenil, Hector and Kiani, Narsis A. and Shen, Yue and Tegner, Jesper N.},
+  booktitle    = {arXiv preprint},
+  year         = {2020},
+  note         = {arXiv:2002.00539},
+  url          = {https://arxiv.org/abs/2002.00539}
+}
+
+@article{khamesian2021hybridattentionneat,
+  title        = {Hybrid Self-Attention NEAT: A Novel Evolutionary Approach to Improve the NEAT Algorithm},
+  author       = {Khamesian, Saman and Malek, Hamed},
+  journal      = {arXiv preprint},
+  year         = {2021},
+  note         = {arXiv:2112.03670},
+  url          = {https://arxiv.org/abs/2112.03670}
+}
+
+@article{volna2005evolutionarynn,
+  title        = {Evolutionary Techniques for Neural Network Optimization},
+  author       = {Volná, Eva},
+  booktitle    = {Proceedings of the 1st International Workshop on Artificial Neural Networks and Intelligent Information Processing (ICINCO / ANNIIP)},
+  year         = {2005},
+  pages        = {3--11},
+  doi          = {10.5220/0001191800030011}
+}
+
+@book{sher2013neuroevolutionerl,
+  title        = {Handbook of Neuroevolution Through Erlang},
+  author       = {Sher, Gene I.},
+  publisher    = {Springer},
+  year         = {2013},
+  isbn         = {978-1-4614-4462-6}
+}
+
